# cpp-code-kata

./: CMakeLists.txt
tests/: CMakeLists.txt  behaviourTests.cpp
tests/BehaviourTests/: CMakeLists.txt  InsertionSortTest.cpp  MergeSortTest.cpp  QuickSortTest.cpp  main.cpp
tests/BenchmarkTests/: CMakeLists.txt
